feat: Auth Swagger improvements
