# docs/swagger.yaml
@@ -106,23 +106,17 @@ paths:
           schema:
             $ref: '#/definitions/responses.LoginUserResponseDto'
         "400":
-          description: Bad Request
+          description: Invalid request
           schema:
-            additionalProperties:
-              type: string
-            type: object
+            $ref: '#/definitions/common.Error400Response'
         "401":
-          description: Unauthorized
+          description: Invalid credentials
           schema:
-            additionalProperties:
-              type: string
-            type: object
+            $ref: '#/definitions/common.Error401Response'
         "500":
-          description: Internal Server Error
+          description: Internal server error
           schema:
-            additionalProperties:
-              type: string
-            type: object
+            $ref: '#/definitions/common.Error500Response'
       summary: Authenticate user
       tags:
       - Auth
